--- a/code/analysis/analysis.Rmd
+++ b/code/analysis/analysis.Rmd
@@ -323,6 +323,15 @@ nrow(scale_reliable_with_info)
 #id 129: 2 scales and 2 studies
 #id 180: 3 scales and 3 studies
 nrow(scale_reliable_with_info)-5
+
+#keep rows only if alpha_new and composite_new have values
+scale_reliable_two_infos <- scale_reliable_with_info %>%
+  filter(!is.na(alpha) & !is.na(composite))
+nrow(scale_reliable_two_infos)
+#check if same id has multiple studies with ids single_sutdy
+#id 56: 4 scales but only 1 study
+#id 180: 3 scales and 3 studies
+nrow(scale_reliable_two_infos)-3
 ```
 
 ### Scales with validity information
